force-app/main/default/objects/OVF__c/OVF__c.object-meta.xml
<CustomObject>
    <description>Order Verification Form submitted via Rubrik Quote Portal</description>
    <label>OVF</label>
    <nameField>
        <displayFormat>OVF-{0000}</displayFormat>
        <label>OVF Name</label>
        <startingNumber>0</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OVFs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>