force-app/main/default/objects/OVF__c/fields/Billing_Subaccount__c.field-meta.xml
<CustomField>
    <fullName>Billing_Subaccount__c</fullName>
    <label>Billing Subaccount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>