force-app/main/default/objects/OVF__c/fields/Buyer_Billing_ID__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Billing_ID__c</fullName>
    <label>Buyer Billing ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>