force-app/main/default/objects/OVF__c/fields/Buyer_Tenant_ID__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Tenant_ID__c</fullName>
    <label>Buyer Tenant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>