force-app/main/default/objects/OVF__c/fields/Company_Name_in_Tackle__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_in_Tackle__c</fullName>
    <label>Company Name in Tackle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>