force-app/main/default/objects/OVF__c/fields/Customer_AWS_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_AWS_Account_ID__c</fullName>
    <label>Customer AWS Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>