force-app/main/default/objects/OVF__c/fields/Customer_Name_in_POA__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_in_POA__c</fullName>
    <label>Customer Name in POA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>