force-app/main/default/objects/OVF__c/fields/Marketplace_Seller_ID__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Seller_ID__c</fullName>
    <label>Marketplace Seller ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>