force-app/main/default/objects/OVF__c/fields/Purchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Amount__c</fullName>
    <label>Purchase Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>