force-app/main/default/objects/OVF__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>OVFs</relationshipLabel>
    <relationshipName>OVFs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>